@@ -243,6 +243,8 @@ Bug fixes:
 - Fixed space after Team name (#58)
 - Fixed Config version wrong (#61)
 - Fixed maxWarps cannot be set to -1 
+- Fixed Team names above 5 characters lose space (#62)
+- Fixed Deleting betterteams does not remove scoreboard teams correctly (#60)
 
 TODO (any TODO which is not specifically code), mainly used for reminders to update documentation
 
